--- a/style.css
+++ b/style.css
@@ -24,11 +24,6 @@ header {
 
 }
 
-
-
-
-
-
 .nav-style {
     background-color: black;
     height: 80px;
@@ -189,8 +184,6 @@ ul {
     width: 50%;
     margin-bottom: 20px;
     margin-right: 10px;
-
-
 }
 
 
@@ -246,30 +239,6 @@ ul {
 
 }
 
-
-#navBarLogo {
-    position: relative;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1.5rem;
-    width: 50%;
-    font-weight: bold;
-    background-color: rgb(245, 115, 115);
-    background-image: linear-gradient(to top, rgb(71, 57, 253), rgb(230, 72, 72));
-    padding: 20px 50px, 40px;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    text-decoration: none;
-    margin-top: 20px;
-    outline: auto;
-    margin: 0 auto -4px 6px;
-    text-align: center;
-}
-
 .navbar_links {
     display: flex;
     height: 75%;
@@ -277,9 +246,6 @@ ul {
     width: 50%;
     margin-left: 100px;
 }
-
-
-
 
 
 .button:hover {
@@ -314,7 +280,7 @@ ul {
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
     margin-bottom: 20px;
-    outline: auto;
+
     width: 100%;
     text-align: center;
     font-weight: bold;
@@ -335,13 +301,12 @@ form {
 
 .pageimage {
 
+    width: 20px;
+    height: 30px;
 
-    position: fixed;
-    background-position: 10px;
-    padding: 20 rem;
-    max-height: 1600px;
-    background-size: 100%;
-    opacity: 70%;
+    margin-bottom: 100px;
+
+
 
 }
 
@@ -371,8 +336,6 @@ form {
     align-items: center;
     margin: 40px auto auto auto;
 
-
-
     display: flex;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-bottom: 20px;
@@ -382,7 +345,8 @@ form {
 
 .line {
     width: 100%;
-    outline: auto;
+
+
     margin-top: 10px;
 
     align-items: center;
@@ -398,9 +362,10 @@ form {
 }
 
 .text {
-    width: 55%;
+    width: 100%;
     margin-left: 85px;
     margin-top: -23px;
+
 }
 
 .square {
@@ -476,7 +441,7 @@ form {
 
     height: 100px;
     color: black;
-    background-color: gray;
+    background-color: midnightblue;
     margin-top: 500px;
 
 }
@@ -486,38 +451,64 @@ form {
     text-align: center;
 }
 
-.mapdesign {
-    margin: 0 auto;
-    justify-content: center;
+span {
+    padding: 10px;
+    /*  box-shadow: 4px 4px 9px 4px rgba(67, 65, 79, 0.1);*/
+
+    transform: rotate(70deg);
+    -ms-transform: rotate(70deg);
+    color: blue;
+    transform: rotate(70deg);
+    -ms-transform: rotate(70deg);
+    -webkit-transform: rotate(70deg);
+    display: inline-block;
 }
 
 .publicity {
     height: 250px;
-    background-color: black;
+    background-color: whitesmoke;
     margin: 50px auto;
     width: 1300px;
     justify-content: center;
     align-items: center;
-    color: beige;
+    color: black;
     text-align: center;
+
 }
 
+.firstvote {}
 
-@media screen and (max-width:600px) {
+.second_vote {}
+
+.third_vote {}
+
+.fourth_vote {}
+
+.fifth_vote {}
+
+.sith_vote {}
+
+.seventh_vote {}
+
+.eighth_vote {}
+
+
+
+@media screen and (max-width:667px) {
 
     * {
         margin: 0;
         padding: 0;
-        max-width: 100%;
 
+        max-width: 667px;
         box-sizing: border-box;
-
 
     }
 
     body {
         margin: 0;
         padding: 0;
+        width: 667px;
     }
 
     header {
@@ -534,4 +525,6 @@ form {
         display: none;
 
     }
+
+    .text {}
 }
