--- a/style.css
+++ b/style.css
@@ -508,5 +508,23 @@ span {
 
     }
 
-    .text {}
+    h4 {
+        width: 75%;
+        margin-left: 70px;
+    }
+
+    .text {
+        width: 100%;
+        margin-left: 92px;
+        margin-top: -23px;
+
+    }
+
+    .square {
+
+        width: 8%;
+        margin: 3.5px 365px 0 0;
+
+
+    }
 }
