--- a/style.css
+++ b/style.css
@@ -267,10 +267,12 @@ ul {
 }
 
 .select_design {
-    width: 200px;
+    width: 205px;
     border-radius: 1px;
     height: 30px;
     margin-top: 5px;
+    padding-left: 4px;
+
 }
 
 .sentencewlcomedesign {
@@ -291,13 +293,6 @@ ul {
     animation-timing-function: cubic-bezier(0.1, -0.6, 0.2, 0);
 }
 
-form {
-    text-align: center;
-    width: 100%;
-    font-weight: bold;
-    color: black;
-
-}
 
 .pageimage {
 
@@ -335,7 +330,7 @@ form {
     justify-content: center;
     align-items: center;
     margin: 40px auto auto auto;
-
+    padding: 0;
     display: flex;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-bottom: 20px;
@@ -345,14 +340,32 @@ form {
 
 .line {
     width: 100%;
+    background-color: white;
+    border: 20px;
 
-
-    margin-top: 10px;
-
+    border-top-left-radius: 1px;
+    border-top-right-radius: 1px;
+    border-bottom-right-radius: 1px;
+    border-bottom-left-radius: 1px;
     align-items: center;
-    padding: 2rem;
+    padding: 0rem;
+
 }
 
+form {
+    text-align: center;
+    width: 55%;
+    font-weight: bold;
+    color: black;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+    padding-left: 0;
+    padding-right: 0;
+    height: 100%;
+    margin: 0 auto;
+    border: 1.7px solid rgba(var(--b6a, 219, 219, 219), 1);
+    border-radius: 7px;
+}
 
 .checkbox {
     box-sizing: border-box;
@@ -452,15 +465,11 @@ form {
 }
 
 span {
-    padding: 10px;
-    /*  box-shadow: 4px 4px 9px 4px rgba(67, 65, 79, 0.1);*/
+    padding: 4px;
 
-    transform: rotate(70deg);
-    -ms-transform: rotate(70deg);
-    color: blue;
-    transform: rotate(70deg);
-    -ms-transform: rotate(70deg);
-    -webkit-transform: rotate(70deg);
+    transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -webkit-transform: rotate(3600deg);
     display: inline-block;
 }
 
