--- a/style.css
+++ b/style.css
@@ -514,7 +514,7 @@ span {
         max-width: 375px;
         box-sizing: border-box;
         overflow-x: hidden;
-        position: fixed;
+
         /* hide the extra width on the page as i set max-width */
     }
 
@@ -537,7 +537,7 @@ span {
         display: flex;
         flex-direction: column;
         margin: 35px auto;
-
+        transform: translateX(100%);
         position: relative;
 
         z-index: 1;
@@ -629,6 +629,7 @@ span {
 
     .nav-activ {
         transform: translateX(0%);
+
     }
 
     .burger {
