--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    max-width: 100%;
+
 
     box-sizing: border-box;
 
@@ -17,159 +17,12 @@ body {
     padding: 0;
     width: 100%;
     box-sizing: border-box;
+
 }
 
 header {
     width: 100%;
 
-}
-
-.nav-style {
-    background-color: black;
-    height: 80px;
-    align-items: center;
-    justify-content: space-evenly;
-    display: flex;
-    font-size: 1.3rem;
-    width: 100%;
-    top: 0;
-    z-index: 999;
-    box-shadow: 20px;
-    max-width: 100%;
-    margin-right: 100%;
-    position: fixed;
-
-}
-
-.navContainer {
-    display: flex;
-    justify-content: space-between;
-    height: 86px;
-    z-index: 1;
-    width: 90%;
-
-    outline-color: aliceblue;
-    margin-top: 4px;
-    padding: 10px 50px;
-    align-items: center;
-
-}
-
-
-.search {
-    position: relative;
-    width: 70px;
-    height: 30px;
-    background: white;
-    width: 100%;
-    border-radius: 10px;
-    transition: 0.5s;
-    box-shadow: 0 0 0 5px aliceblue;
-    margin-right: 5px;
-    bottom: 3px;
-    overflow: hidden;
-}
-
-.search.active {
-    width: 360px;
-}
-
-.search .icon {
-    position: absolute;
-    left: -5;
-    top: -16px;
-    width: 60px;
-    height: 60px;
-    background: white;
-    border-radius: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    margin-bottom: 3px;
-}
-
-.search .icon::before {
-    content: '';
-    position: absolute;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    border: 3px solid;
-
-}
-
-.search .icon::after {
-    content: '';
-    position: absolute;
-    width: 1px;
-    height: 8px;
-    border: 1px solid;
-    background: black;
-    border-radius: 10%;
-    transform: translate(3px, 10px) rotate(311deg);
-    margin-bottom: 2px;
-    margin-left: 13px;
-}
-
-.search .input {
-    position: relative;
-    width: 300px;
-    height: 20px;
-    left: 65px;
-    bottom: 3px;
-    top: 4px;
-    display: flex;
-    justify-content: center;
-
-}
-
-.search .input input {
-    position: absolute;
-    top: 3px;
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
-    font-size: 18px;
-    padding: 10px 0;
-}
-
-
-
-.clear {
-
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 15px;
-    height: 15px;
-    right: 10px;
-    background: white;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
-}
-
-.clear::before {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 15px;
-    background: black;
-    transform: rotate(45deg);
-}
-
-.clear::after {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 15px;
-    background: black;
-    transform: rotate(135deg);
 }
 
 a {
@@ -178,34 +31,6 @@ a {
 
 ul {
     list-style: none;
-}
-
-.logomargin {
-    width: 50%;
-    margin-bottom: 20px;
-    margin-right: 10px;
-}
-
-
-.btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    width: 100%;
-    height: 50%;
-    margin-bottom: 15px;
-    margin-left: 40px;
-}
-
-.linkOnList {
-
-    height: 100%;
-    width: 100%;
-    align-items: center;
-    justify-content: space-evenly;
-    text-decoration: none;
-    margin-top: 25px;
 }
 
 .button {
@@ -221,30 +46,9 @@ ul {
     border: none;
     outline: auto;
     border-radius: 4px;
-    background: rgb(250, 70, 70);
+    background: black;
     ;
     color: white;
-}
-
-.u_list {
-    color: aliceblue;
-    display: flex;
-    left: 50px;
-    align-items: center;
-    justify-content: space-evenly;
-    text-decoration: none;
-
-
-
-
-}
-
-.navbar_links {
-    display: flex;
-    height: 75%;
-    color: white;
-    width: 50%;
-    margin-left: 100px;
 }
 
 
@@ -253,21 +57,12 @@ ul {
     transition: all 0.5s ease;
 }
 
-.navbar_links:hover {
-    color: blue;
-    transition: all 0.5s ease;
-}
 
-.barStyle {
-    border-radius: 9px;
-    font-size: large;
-    height: 35px;
-    width: 1000px;
-    margin-right: px;
-}
+
+
 
 .select_design {
-    width: 205px;
+    width: 215px;
     border-radius: 1px;
     height: 30px;
     margin-top: 5px;
@@ -288,44 +83,16 @@ ul {
     font-weight: bold;
     font-size: x-large;
     font-weight: 800;
-    animation: jerry;
+
     animation-duration: 8s;
     animation-timing-function: cubic-bezier(0.1, -0.6, 0.2, 0);
 }
 
 
-.pageimage {
 
-    width: 20px;
-    height: 30px;
-
-    margin-bottom: 100px;
-
-
-
-}
-
-.submitbutton {
-    margin-left: 590px;
-    width: 70px;
-    height: 30px;
-    margin-top: 70px;
-    margin-right: px;
-    background-color: gray;
-    border-style: double;
-}
-
-
-
-.submitbutton:hover {
-
-    background-color: rgb(88, 97, 84);
-
-
-}
 
 .page_content {
-    width: 1300px;
+    width: 100%;
     height: 50%;
     justify-content: center;
     align-items: center;
@@ -353,7 +120,8 @@ ul {
 
 form {
     text-align: center;
-    width: 55%;
+    width: 50%;
+    background-color: white;
     font-weight: bold;
     color: black;
     padding-top: 1rem;
@@ -368,28 +136,22 @@ form {
 
 .checkbox {
     box-sizing: border-box;
-    margin: 12px auto 0 65px;
-
+    margin: 20px 8px auto auto;
+    padding: 0;
     text-align: center;
 }
 
 .text {
-    width: 100%;
-    margin-left: 88px;
-    margin-top: -23px;
+    width: 10%;
+    margin: 0px auto;
 
 }
 
-.square {
-
-    width: 8%;
-    margin: 3.5px 361px 0 0;
-
-}
+.square {}
 
 .vote_nav {
     height: 45px;
-    background-color: rgb(26, 24, 24);
+    background-color: rgba(240, 242, 245, 1);
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -423,8 +185,9 @@ form {
 
 .burger div {
     height: 2px;
+
     width: 35px;
-    background-color: aliceblue;
+    background-color: black;
     margin: 5px;
 }
 
@@ -441,7 +204,7 @@ form {
     font-weight: bold;
     display: flex;
     height: 100%;
-    color: rgb(79, 120, 152);
+    color: black;
     justify-content: space-between;
     margin-top: 7px;
 
@@ -450,40 +213,16 @@ form {
 
 
 .linkdesign:hover {
-    color: white;
+    color: goldenrod;
     transition: all 0.5s ease;
 }
 
 
 
-.bodypage {
-    margin-top: 100px;
-    text-align: center;
-}
 
-span {
-    margin-top: 5px;
-    padding: 3px;
 
-    transform: rotate(178deg);
-    -ms-transform: rotate(178deg);
-    -webkit-transform: rotate(178deg);
-    display: inline-block;
-}
 
-.publicity {
-    height: 400px;
-    background-color: whitesmoke;
-    margin: 50px auto;
-    width: 1300px;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    text-align: center;
-    background-image: url(giphy.gif);
-    border-image-slice: 50px;
 
-}
 
 
 
@@ -491,24 +230,106 @@ span {
 
 
     * {
-        max-width: 100%;
-
-        box-sizing: border-box;
         margin: 0;
         padding: 0;
+        overflow-x: hidden;
+        box-sizing: border-box;
+
+
 
     }
 
-    body {
+
+
+    body {}
+
+    .container {
+        overflow-x: hidden;
+        position: relative;
+    }
+
+    nav {
+        overflow-x: hidden;
+    }
+
+    .vote_nav {
+        overflow-x: hidden;
+
+    }
+
+    .page_content {
         width: 100%;
-        box-sizing: border-box;
+        justify-content: center;
+        align-items: center;
+        margin: 40px auto auto auto;
+        padding: 0;
+        display: flex;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        padding-bottom: 20px;
+        font-weight: bold;
+
     }
 
     form {
-        width: 80%;
+        text-align: center;
+        width: 95%;
+        font-weight: bold;
+        color: black;
+        padding-left: 0;
+        padding-right: 0;
+        height: 100%;
+        margin: 0px auto;
+        outline: none;
+        border: none;
+        height: 100%;
     }
 
+    .line {
 
+        background-color: white;
+        outline: none;
+        align-items: center;
+        padding: 0rem;
 
+    }
 
+    .votenavcontents {
+        position: absolute;
+        background-color: rgb(125, 38, 38);
+        z-index: 1;
+        padding: 0px;
+        top: 47px;
+        display: flex;
+        flex-direction: column;
+        transform: translateX(100%);
+
+    }
+
+    .burger {
+        display: block;
+        width: 10%;
+    }
+
+    .linkvote {
+        margin: 60px auto;
+        width: 50%;
+    }
+
+    .linkdesign {
+        width: 50%;
+
+    }
+
+    .select_design {
+        width: 100%;
+        border-radius: 5px;
+        height: 50px;
+        margin-top: 5px;
+        padding-left: 4px;
+
+    }
+
+    .nav-activ {
+        transform: translateX(0%);
+    }
 }
