--- a/style.css
+++ b/style.css
@@ -239,7 +239,16 @@ form {
 
 
 
+    body {
+        position: relative;
+        overflow-x: hidden;
+    }
 
+
+    header {
+        overflow-x: hidden;
+
+    }
 
 
 
