--- a/style.css
+++ b/style.css
@@ -62,9 +62,9 @@ ul {
 
 
 .select_design {
-    width: 215px;
+    width: 225px;
     border-radius: 1px;
-    height: 30px;
+    height: 32px;
     margin-top: 5px;
     padding-left: 4px;
 
@@ -204,7 +204,7 @@ form {
     font-weight: bold;
     display: flex;
     height: 100%;
-    color: whitesmoke;
+    color: black;
     justify-content: space-between;
     margin-top: 7px;
 
@@ -224,7 +224,7 @@ form {
 
 
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:820px) {
 
 
     * {
@@ -289,7 +289,7 @@ form {
 
     .votenavcontents {
         position: absolute;
-        background-color: rgb(125, 38, 38);
+        background-color: white;
         z-index: 1;
         padding: 0px;
         top: 47px;
@@ -310,9 +310,14 @@ form {
     }
 
     .linkdesign {
-        width: 60%;
-        height: 30px;
-
+        font-weight: bold;
+        display: flex;
+        height: 100%;
+        color: black;
+        justify-content: space-between;
+        margin-top: 7px;
+        font-weight: bolder;
+        font-size: larger;
     }
 
     .select_design {
