--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ form {
     height: 2px;
 
     width: 35px;
-    background-color: black;
+    background-color: whitesmoke;
     margin: 5px;
 }
 
