--- a/blogdesign.css
+++ b/blogdesign.css
@@ -80,6 +80,19 @@ footer {
     justify-content: center;
     border-radius: 3px;
     outline: 5px;
+
+
+    /* Green */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 /*class of the div that contains the text area*/
