--- a/public/blogdesign.css
+++ b/public/blogdesign.css
@@ -110,3 +110,38 @@ footer {
     height: 300px;
 
 }
+
+.formnickname {}
+
+.inputnickname {
+    width: 350px;
+    height: 30px;
+    border-radius: 9px;
+    padding-left: 6px;
+}
+
+.img {
+    width: 1000px;
+    background-color: black;
+    height: 400px;
+
+    margin-top: 100px;
+}
+
+.contentposition {
+
+    float: right;
+    margin-top: 200px;
+    margin-right: 50px;
+
+}
+
+.linktoothersite {
+    color: #6e6161;
+    font-weight: bold;
+    font-size: large;
+}
+
+.linktoothersite:hover {
+    color: white;
+}
