--- a/public/style.css
+++ b/public/style.css
@@ -53,7 +53,7 @@ ul {
 
 
 .button:hover {
-    background: red;
+    background: rgb(58, 57, 57);
     transition: all 0.5s ease;
 }
 
@@ -124,7 +124,7 @@ ul {
 form {
     text-align: center;
     width: 40%;
-    background-color: rgb(223, 176, 176);
+
     font-weight: bold;
     color: black;
     padding-top: 1rem;
@@ -133,7 +133,8 @@ form {
     padding-right: 0;
     height: 100%;
     margin: 0 auto;
-    border: 0.2px solid rgba(var(--b6a, 2, 2, 2), 1);
+    margin-top: 60px;
+    border: 0.1px solid rgba(var(--b6a, 2, 2, 2), 1);
     border-radius: 7px;
 }
 
@@ -154,7 +155,7 @@ form {
 
 .vote_nav {
     height: 45px;
-    background-color: rgba(123, 94, 156, 0.511);
+    background-color: rgba(2, 2, 0, 0.055);
     ;
     width: 100%;
     display: flex;
@@ -216,7 +217,7 @@ form {
     font-weight: bold;
     display: flex;
     height: 100%;
-    color: white;
+    color: rgb(48, 45, 45);
     justify-content: space-between;
     margin-top: 7px;
 
@@ -225,7 +226,7 @@ form {
 
 
 .linkdesign:hover {
-    color: rgb(98, 78, 26);
+    color: rgb(40, 37, 31);
     transition: all 0.5s ease;
 }
 
