--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@
     padding: 0;
 
 
+
     box-sizing: border-box;
 
 
@@ -17,6 +18,8 @@ body {
     padding: 0;
     width: 100%;
     box-sizing: border-box;
+    height: 100%;
+
 
 }
 
@@ -53,8 +56,9 @@ ul {
 
 
 .button:hover {
-    background: rgb(58, 57, 57);
+    background: rgb(174, 172, 172);
     transition: all 0.5s ease;
+    cursor: pointer;
 }
 
 
@@ -105,6 +109,79 @@ ul {
     font-weight: bold;
     float: right;
     border-radius: 9px;
+
+}
+
+h2 {
+
+    margin-top: 2%;
+    justify-content: center;
+    font-style: italic;
+    width: 100%;
+    text-align: center;
+}
+
+.countdown {
+    display: flex;
+    justify-content: center;
+    margin: auto 0;
+}
+
+.titlectd {
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.dhms {
+    margin-left: 35px;
+
+}
+
+.bigtextdays {
+    font-size: 3rem;
+    margin: 0 2rem;
+    justify-content: center;
+    justify-items: center;
+    color: rgb(126, 126, 129);
+    ;
+}
+
+
+
+.bigtextmins {
+    font-size: 3rem;
+    margin: 0 2rem;
+    justify-content: center;
+    justify-items: center;
+    color: rgb(126, 126, 129);
+    ;
+}
+
+.bigtextsecond {
+    font-size: 3rem;
+    margin: 0 2rem;
+    justify-content: center;
+    justify-items: center;
+    color: rgb(126, 126, 129);
+}
+
+.bigtexthours {
+    font-size: 3rem;
+    margin: 0 2rem;
+    justify-content: center;
+    justify-items: center;
+    color: rgb(126, 126, 129);
+}
+
+.mapsearchentry {
+    justify-content: center;
+    border-radius: 8px;
+    margin-left: 630px;
+    margin-top: 40px;
+    height: 40px;
+    width: 600px;
+    padding-left: 10px;
+
 
 }
 
@@ -200,7 +277,7 @@ form {
     height: 2px;
 
     width: 35px;
-    background-color: whitesmoke;
+    background-color: rgb(33, 31, 31);
     margin: 5px;
 }
 
