--- a/public/style.css
+++ b/public/style.css
@@ -49,7 +49,7 @@ ul {
     border: none;
     outline: auto;
     border-radius: 4px;
-    background: black;
+    background: rgb(27, 80, 186);
     ;
     color: white;
 }
@@ -140,39 +140,41 @@ h2 {
 }
 
 .bigtextdays {
-    font-size: 3rem;
+    font-size: 1rem;
     margin: 0 2rem;
     justify-content: center;
     justify-items: center;
-    color: rgb(126, 126, 129);
-    ;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
 }
 
 
 
 .bigtextmins {
-    font-size: 3rem;
+    font-size: 1rem;
     margin: 0 2rem;
     justify-content: center;
     justify-items: center;
-    color: rgb(126, 126, 129);
-    ;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
 }
 
 .bigtextsecond {
-    font-size: 3rem;
+    font-size: 1rem;
     margin: 0 2rem;
     justify-content: center;
     justify-items: center;
-    color: rgb(126, 126, 129);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
 }
 
 .bigtexthours {
-    font-size: 3rem;
+    font-size: 1rem;
     margin: 0 2rem;
     justify-content: center;
     justify-items: center;
-    color: rgb(126, 126, 129);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
 }
 
 .mapsearchentry {
@@ -203,19 +205,19 @@ h2 {
 
 form {
     text-align: center;
-    width: 40%;
+    width: 50%;
 
     font-weight: bold;
     color: black;
     padding-top: 1rem;
     padding-bottom: 3rem;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 20px;
+    padding-right: 20px;
     height: 100%;
     margin: 0 auto;
-    margin-top: 60px;
-    border: 0.1px solid rgba(var(--b6a, 2, 2, 2), 1);
-    border-radius: 7px;
+    margin-top: 40px;
+    float: right;
+
 }
 
 .checkbox {
@@ -234,7 +236,7 @@ form {
 
 .vote_nav {
     height: 45px;
-    background-color: rgba(2, 2, 0, 0.055);
+    background-color: rgb(62, 9, 146);
 
     width: 100%;
     display: flex;
@@ -247,8 +249,9 @@ form {
     justify-content: center;
     display: flex;
     padding-left: 30px;
-    width: 100%;
+    width: 50%;
     align-items: center;
+    margin-left: 840px;
 }
 
 .container {
@@ -267,7 +270,7 @@ form {
     display: flex;
     margin-top: 800px;
     width: 100%;
-    background-color: cornflowerblue;
+    background-color: rgb(249, 251, 254);
 
 }
 
@@ -296,7 +299,7 @@ form {
     font-weight: bold;
     display: flex;
     height: 100%;
-    color: rgb(34, 54, 172);
+    color: rgb(255, 255, 255);
     justify-content: space-between;
     margin-top: 7px;
 
@@ -331,6 +334,7 @@ footer {
 
     list-style-type: square;
 }
+
 
 @media screen and (max-width:820px) {
 
@@ -483,4 +487,68 @@ footer {
     }
 
 
+}
+
+
+.form-control.form-control-solid {
+    background-color: #f9f9f9;
+    border-color: #f9f9f9;
+    color: #5e6278;
+    transition: color 0.2s ease;
+
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: 0.775rem 1rem;
+    font-size: 1.1rem;
+    font-weight: 500;
+    line-height: 1.5;
+    color: var(--bs-gray-700);
+    background-color: var(--bs-body-bg);
+    background-clip: padding-box;
+    border: 1px solid var(--bs-gray-300);
+    appearance: none;
+    border-radius: 0.475rem;
+    box-shadow: false;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    margin-bottom: 20px;
+
+}
+
+
+
+
+.form-control.form-control-solid {
+    background-color: #f9f9f9;
+    border-color: #f9f9f9;
+    color: #5e6278;
+    transition: color 0.2s ease;
+
+}
+
+.flatpickr-input[readonly] {
+    cursor: pointer;
+}
+
+.ps-12 {
+    padding-left: 3rem !important;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: 0.775rem 1rem;
+    font-size: 1.1rem;
+    font-weight: 500;
+    line-height: 1.5;
+    color: var(--bs-gray-700);
+    background-color: var(--bs-body-bg);
+    background-clip: padding-box;
+    border: 1px solid var(--bs-gray-300);
+    appearance: none;
+    border-radius: 0.475rem;
+    box-shadow: false;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
